syntax = "proto3"; 
// replace namespace with your own
option csharp_namespace = "RivalCoins.WebWallet.Shared.Grpc"; 
package WeatherForecast; 
import "google/protobuf/timestamp.proto"; 

service RivalCoinsService { 
	rpc CreateAirDropTransaction (AirDropRequest) returns (Transaction);
	rpc SubmitAirDropTransaction (SignedTransaction) returns (Success);
} 

message AirDropRequest {
	string recipientAddress = 1;
}

message Transaction {
	string unsignedXdr = 1;
}

message SignedTransaction {
	string Xdr = 1;
}

message Success {
	bool Success = 1;
}

service WeatherForecasts { 
	rpc GetWeather (WeatherForecast) returns (WeatherReply); 
} 

message WeatherReply { 
	repeated WeatherForecast forecasts = 1; 
} 

message WeatherForecast { 
	google.protobuf.Timestamp dateTimeStamp = 1; 
	int32 temperatureC = 2; 
	string summary = 3; 
}